=================================================================
                   NION: TRUNCHEON - CHANGELOG
=================================================================

This file shall track the changes made to the code and project.
Dates shall be subsequently added to reflect changes made at
given time frame.

To check ALL changes, please check the GitHub commits.

This is the first update to Truncheon, providing many changes,
improvements in the aspects of security, performance and program
flexibility. Please check this file if you want to keep a track
of the changes made to the code over time.

-----------------------------------------------------------------
CHANGES MADE TO v1.1.0 CODENAMED "KATANA" (14-FEB-2022)
-----------------------------------------------------------------

ADDITIONS:

* Abraxis File integrity checking during boot
* Repair mode to recover from faulty programs
* Tulzscha tools to sign the compiled build
* Print streams to customize the output messages with
color coding support
* Refactored, Unified and modularized scripting system
* Kernel Prober 1.0 to check for bootable kernels by the loader

IMPROVEMENTS:

* Upgraded Java version and JRE to 18.0.1.1
* Upgraded File structures to Nion program standards
* Improved database handling logic and login authentication
* Improved existing interactive tools
* Improved API flexibility
* Improved Code readability
* Improved the user friendliness of the program
* Fixed certain code issues
* Removed unsafe code structures
* Optimized resource usage and overall performance

DELETIONS AND DEPRECATIONS:

* Removed redundant code
* Older database system handing programs
* older file management and main menu scripting logic
* redundant tools
* debug/unused/redundant code

-----------------------------------------------------------------