@@ -1,14 +1,64 @@
 package Truncheon.API.Grinch;
 
+import java.io.File;
+
+import Truncheon.API.IOStreams;
+
 class FileManagement
 {
-    private void FileManagementLogic()
+    public void grinchInterface()
     {
+        //get policy for authentication
 
+        //login
+
+        //begin filemanagement system logic
     }
-    
-    private void grinchInterface()
+
+    private void fileManagerLogic(String command)
     {
-        
+        String[] commandArray = Truncheon.API.Anvil.splitStringToArray(command);  
+    
+        switch(commandArray[0])
+        {
+            case "":;
+            break;
+
+            case "mkdir":
+            break;
+
+            case "rmdir":
+            break;
+
+            case "dir":
+            case "ls":
+            break;
+
+            case "edit":
+            break;
+
+            case "open":
+            break;
+
+            case "del":
+            case "rm":
+            break;
+
+            case "rename":
+            case "ren":
+            break;
+
+            case "tree":
+            break;
+
+            default:
+                IOStreams.printError("Unrecognized command.");
+            break;
+        }
     }
+
+    public boolean fileManagerLogic(File scriptFileName, int lineNumber)
+    {
+        return false;
+    }    
 }
